THRIFT-5122: Fix memory leak in c_glib tutorial server Client: c_glib Patch: wangyunjian

Signed-off-by: wangyunjian <wangyunjian@huawei.com>